# gtirb

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .flake8  .gitignore  .gtirb.tex  .isort.cfg  .lisp-format  .pre-commit-config.yaml  AlignOf.cmake  AuxData-Tables.md  AuxData.md  CHANGELOG.md  CMakeLists.googletest  CMakeLists.gsl  CMakeLists.protobuf  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.arch  Dockerfile.formatter  Dockerfile.ubuntu16  Dockerfile.ubuntu18  Doxyfile  FAQ.md  LICENSE.txt  Macros.cmake  NOTES  NOTES.md  PROTOBUF.md  README.md  api-walkthrough_8cpp-example.html  cfg-paths_8cpp-example.html  cfg-paths_8lisp-example.html  cfg-paths_8py-example.html  conanfile.py  cpack-centos-post-install.sh  cpack-config.cmake  data-symbols_8cpp-example.html  data-symbols_8lisp-example.html  (+48 more)
doc/: ASTs.md  CFG-Edges.md  CMakeLists.txt  README.md  binary-representation.md  gtirbASTs.md  gtirbBibliography.md  gtirbFAQ.md  gtirbPrototype.hpp  gtirbPrototypeStructure.dot  gtirbRoadmap.md  gtirbSoftwareEngineering.md  index.html  preprocmd.py
doc/cl/: CMakeLists.txt  write-documentation.lisp
doc/cpp/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  README.md  example.cpp
doc/dot/: gtirbDataFlow_RewritingAnalysisMixed.dot  gtirbDataFlow_SWYXToCodeSonar.dot  gtirbDataStructure_BEIR.dot  gtirbDataStructure_CFG.dot  gtirbDataStructure_GTIR.dot  gtirbDataStructure_SWYXIR.dot  gtirbModuleConnections.dot  gtirbPrototypeStructure.dot  gtirbScope.dot
doc/doxy/: CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  builddocs.sh  preprocmd.pl  preprocmd.py
doc/examples/: CMakeLists.txt  api-walkthrough.cpp  cfg-paths.cpp  cfg-paths.lisp  cfg-paths.py  cfgpaths.java  data-symbols.cpp  data-symbols.lisp  data-symbols.py  datasymbols.java  functions.cpp  jumps.cpp  show-cfg.lisp  show-cfg.py  stack-stamp.md
doc/general/: AuxDataContainer.md  Block.md  ByteBlock.md  ByteInterval.md  CFG.md  CMakeLists.txt  COMPONENTS.md  CfgEdge.md  CfgEdgeLabel.md  CfgNode.md  CodeBlock.md  ComponentsIndex.md  DataBlock.md  Desc_Node.md  Doxyfile.in  DoxygenLayout.xml  IR.md  Module.md  NODE.md  Node.md  ProxyBlock.md  Section.md  SymAddrAddr.md  SymAddrConst.md  SymStackConst.md  Symbol.md  SymbolicExpression.md  Version.md  examples.dox  images.dox  preprocmd.py
doc/html/: _addr_ranges_8hpp.html  _addr_ranges_8hpp__incl.map  _addr_ranges_8hpp__incl.md5  _addr_ranges_8hpp_source.html  _any_8hpp.html  _any_8hpp.js  _any_8hpp__dep__incl.map  _any_8hpp__dep__incl.md5  _any_8hpp_source.html  _constants_8hpp.html  _constants_8hpp__dep__incl.map  _constants_8hpp__dep__incl.md5  _constants_8hpp__incl.map  _constants_8hpp__incl.md5  _constants_8hpp_source.html  _e_a_8hpp.html  _e_a_8hpp.js  _e_a_8hpp__dep__incl.map  _e_a_8hpp__dep__incl.md5  _e_a_8hpp__incl.map  _e_a_8hpp__incl.md5  _e_a_8hpp_source.html  _enums_8hpp.html  _enums_8hpp.js  _enums_8hpp__dep__incl.map  _enums_8hpp__dep__incl.md5  _enums_8hpp_source.html  _exception_8hpp.html  _exception_8hpp__dep__incl.map  _exception_8hpp__dep__incl.md5  _exception_8hpp__incl.map  _exception_8hpp__incl.md5  _exception_8hpp_source.html  _export_8hpp.html  _export_8hpp.js  _export_8hpp__dep__incl.map  _export_8hpp__dep__incl.md5  _export_8hpp_source.html  _i_r_8hpp.html  _i_r_8hpp__incl.map  (+280 more)
doc/java/: CMakeLists.txt
doc/python/: CMakeLists.txt  conf.py
python/: .buildinfo  .coveragerc  CMakeLists.txt  README.md  genindex.html  gtirb.auxdata.html  gtirb.block.html  gtirb.byteinterval.html  gtirb.cfg.html  gtirb.html  gtirb.ir.html  gtirb.module.html  gtirb.node.html  gtirb.offset.html  gtirb.proto.AuxData_pb2.html  gtirb.proto.ByteInterval_pb2.html  gtirb.proto.CFG_pb2.html  gtirb.proto.CodeBlock_pb2.html  gtirb.proto.DataBlock_pb2.html  gtirb.proto.IR_pb2.html  gtirb.proto.Module_pb2.html  gtirb.proto.Offset_pb2.html  gtirb.proto.ProxyBlock_pb2.html  gtirb.proto.Section_pb2.html  gtirb.proto.Symbol_pb2.html  gtirb.proto.SymbolicExpression_pb2.html  gtirb.proto.html  gtirb.section.html  gtirb.serialization.html  gtirb.symbol.html  gtirb.symbolicexpression.html  gtirb.util.html  gtirb.version.html  index.html  install.cmake.in  mypy.ini.in  objects.inv  py-modindex.html  requirements-dev.txt  search.html  (+4 more)
python/_modules/: index.html
python/_sources/: gtirb.auxdata.rst.txt  gtirb.block.rst.txt  gtirb.byteinterval.rst.txt  gtirb.cfg.rst.txt  gtirb.ir.rst.txt  gtirb.module.rst.txt  gtirb.node.rst.txt  gtirb.offset.rst.txt  gtirb.proto.AuxData_pb2.rst.txt  gtirb.proto.ByteInterval_pb2.rst.txt  gtirb.proto.CFG_pb2.rst.txt  gtirb.proto.CodeBlock_pb2.rst.txt  gtirb.proto.DataBlock_pb2.rst.txt  gtirb.proto.IR_pb2.rst.txt  gtirb.proto.Module_pb2.rst.txt  gtirb.proto.Offset_pb2.rst.txt  gtirb.proto.ProxyBlock_pb2.rst.txt  gtirb.proto.Section_pb2.rst.txt  gtirb.proto.Symbol_pb2.rst.txt  gtirb.proto.SymbolicExpression_pb2.rst.txt  gtirb.proto.rst.txt  gtirb.rst.txt  gtirb.section.rst.txt  gtirb.serialization.rst.txt  gtirb.symbol.rst.txt  gtirb.symbolicexpression.rst.txt  gtirb.util.rst.txt  gtirb.version.rst.txt  index.rst.txt
python/gtirb/: __init__.py  addr.py  auxdata.py  auxdatacontainer.py  block.py  byteinterval.py  bytemap.py  cfg.py  dataobject.py  gtirb.py  imagebytemap.py  ir.py  lazyintervaltree.py  module.py  node.py  offset.py  section.py  serialization.py  symbol.py  symbolicexpression.py  util.py
python/stubs/: README.md
python/tests/: hello.gtirb  hello.v0.gtirb  hello.v1.gtirb  helpers.py  (+34 more)
src/: Addr.cpp  AddrRanges.cpp  AuxData.cpp  AuxDataContainer.cpp  Block.cpp  ByteInterval.cpp  ByteMap.cpp  CFG.cpp  CFGNode.cpp  CFGNodeInfo.cpp  CFGNodeInfoActualIn.cpp  CFGNodeInfoCall.cpp  CFGNodeInfoDeclares.cpp  CFGNodeInfoEntry.cpp  CFGNodeInfoFormalIn.cpp  CFGSerialization.hpp  CFGSet.cpp  CMakeLists.txt  CodeBlock.cpp  Context.cpp  Data.cpp  DataBlock.cpp  DataObject.cpp  EA.cpp  Error.cpp  ErrorOr.cpp  Exception.cpp  FileMap.cpp  IR.cpp  ImageByteMap.cpp  Instruction.cpp  LoadedFileMap.cpp  LocalProperties.cpp  LogicError.cpp  Module.cpp  ModuleAux.cpp  ModuleCore.cpp  ModuleSectionBase.cpp  ModuleSummary.cpp  Node.cpp  (+22 more)
(+1417 files in other folders)
